--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        compile group: 'com.esotericsoftware', name: 'kryonet', version: '2.22.0-RC1'
         
     }
 }
